--- a/ltmain.in
+++ b/ltmain.in
@@ -1,6 +1,6 @@
 # ltmain.sh - Provide generalized library-building support services.
 # @configure_input@
-# Copyright (C) 1996, 1997 Free Software Foundation, Inc.
+# Copyright (C) 1996-1998 Free Software Foundation, Inc.
 # Gordon Matzigkeit <gord@gnu.ai.mit.edu>, 1996
 #
 # This program is free software; you can redistribute it and/or modify
